--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,11 @@ body {
     height:100vh;
     width:100vw;
 }
-
+h1{
+    font-family: cursive;
+    font-size: 38px;
+    color:rgb(98, 169, 241);
+}
 #main_img
 {
     width:100%;
@@ -29,8 +33,8 @@ body {
 .btn {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #0288d1;
-    color: white;
+    background-color: #19191a;
+    color: #ffffff;
     text-decoration: none;
     border-radius: 5px;
     font-size: 18px;
